--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -1762,3 +1762,10 @@ $controlsArrowAngleActive: 36deg;
 .zoomed .reveal .roll span:after {
 	visibility: hidden;
 }
+
+/*******************
+* OVERRIDES
+*******************/
+img[data-gif] {
+	border: none !important;
+}
